@@ -16,6 +16,8 @@ software-center (3.1.21) UNRELEASED; urgency=low
   * merged lp:~gary-lasker/software-center/deauth_username, many thanks
   * softwarecenter/view/appdetailsview_gtk.py:
     - expose usefulness UI
+  * softwarecenter/db/reviews.py:
+    - deal properly with "Not modified" return value
 
   [ Gary Lasker ]
   * softwarecenter/enums.py,
